welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:1: error: Missing closing brace `}' assumed here
def in3050(a:Int, b:Int):Boolean = {
^